# Exo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
src/: NvidiaARLoader.cpp  NvidiaARLoader.hpp  main.cpp
src/calibration/: calibration_apriltag_detector.cpp  calibration_apriltag_detector.hpp  calibration_config.hpp
src/calibration/apriltag/: apriltag_estimate_tag_pose.cpp  apriltag_estimate_tag_pose.hpp
src/calibration/solvepnp/: solvepnp_ippe_square.cpp  solvepnp_ippe_square.hpp
src/config/: config_application.cpp  config_application.hpp
src/core/: eigen_helpers.hpp  hybrid_buffer.hpp  types.hpp
src/draw/: draw_skeleton_perspective_projection.cpp  draw_skeleton_perspective_projection.hpp  skeleton.hpp
src/engines/nvidia/: nvar_body_pose_estimation.cpp  nvar_body_pose_estimation.hpp  nvar_config.hpp  nvar_pose.hpp
src/engines/nvidia/helpers/: helpers.hpp
src/osc/: osc_config.hpp  osc_sender.cpp  osc_sender.hpp
src/sources/: isource.hpp  source_config.hpp  source_factory.cpp  source_factory.hpp
src/sources/webcam/: webcam_config.hpp  webcam_source.cpp  webcam_source.hpp
src/workers/capture/: capture_worker.cpp  capture_worker.hpp
src/workers/display/: display_worker.cpp  display_worker.hpp
src/workers/engine/: engine_worker.cpp  engine_worker.hpp
src/workers/output/: output_worker.cpp  output_worker.hpp
